mebbe pagination? Part4 (I'm sorry I'm dumb)

--- a/templates/title.html
+++ b/templates/title.html
@@ -20,7 +20,7 @@
   <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   <!--pagination plug in -->
   <script type="text/javascript" src="//cdn.datatables.net/plug-ins/1.10.16/pagination/full_numbers_no_ellipses.js"></script>
-    <script type="text/javascript" href="Scrpts.simplePagination.js"></script>
+    <script type="text/javascript" href="Scrpts/simplePagination.js"></script>
 </head>
 
 <body>
