--- a/templates/title.html
+++ b/templates/title.html
@@ -15,6 +15,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
   <script type="text/javascript" href="Scrpits/jquery-3.2.1.js"></script>
+   <script type="text/javascript" href="Scrpits/jquery-1.12.4.js"></script>
   <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
   <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   <!--pagination plug in -->
@@ -83,9 +84,8 @@
 </table>
 </div>
 
-<script type="text/javascript" src="jquery.dataTables.js"></script>
-<script type="text/javascript" src="dataTables.filter.html.js"></script>
-<<script type="text/javascript">
+<script type="text/javascript" href="Scripts/jquery.dataTables.min.js"></script>
+<script type="text/javascript">
 function filterGlobal () {
     $('#table').DataTable().search(
         $('#global_filter').val(),
@@ -93,24 +93,12 @@ function filterGlobal () {
         $('#global_smart').prop('checked')
     ).draw();
 }
- 
-function filterColumn ( i ) {
-    $('#table').DataTable().column( i ).search(
-        $('#col'+i+'_filter').val(),
-        $('#col'+i+'_regex').prop('checked'),
-        $('#col'+i+'_smart').prop('checked')
-    ).draw();
-}
- 
+
 $(document).ready(function() {
     $('#table').DataTable();
  
     $('input.global_filter').on( 'keyup click', function () {
         filterGlobal();
-    } );
- 
-    $('input.column_filter').on( 'keyup click', function () {
-        filterColumn( $(this).parents('tr').attr('data-column') );
     } );
 } );
  </script> 
