--- a/templates/test.html
+++ b/templates/test.html
@@ -2,6 +2,7 @@
 <head>
 <script type="text/javascript" href="Scripts/jquery.dataTables.min.js"></script>
   <script type="text/javascript" href="Scrpits/jquery-1.12.4.js"></script>
+  <link rel="stylesheet" type="text/css" href="static/css/jquery.dataTables.min.css">
 </head>
 <body>
 <table style="width: 67%; margin: 0 auto 2em auto;" cellspacing="0" cellpadding="3" border="0">
