--- a/templates/author.html
+++ b/templates/author.html
@@ -1,30 +1,32 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
+  <head>
+  <!--<link rel="stylesheet" type="text/css" href="static/css/index.css">-->
+  <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" -->
+      <!-- rel="stylesheet"> -->
 
-<head>
-<title> Books Galore </title>
-	<meta name="viewpt" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="static/images/book.ico">
-    <meta charset="utf-8">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!--jq stuffs-->
-       
-</head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>AUTHORS</title>
 
-<body>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <!-- -->
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
+      
 
-<!--
-	<a href = 'about.html'>About</a>
-	<a href = 'model.html'>Models</a>
-	<a href = 'author.html'>Authors</a>
-	<a href = 'title.html'>Titles</a>
-	<a href = 'publisher.html'>Publishers</a>
--->
-<nav class="navbar navbar-inverse">
+      <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
+      <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
+
+  </head>
+
+  <body>
+    <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Books Galore</a>
@@ -33,152 +35,131 @@
       <li ><a href="{{url_for('index')}}">Home</a></li>
       <li ><a href="{{url_for('about')}}">About</a></li>
       <li class="active"><a href="{{url_for('author')}}">Authors</a></li>
-	    <li><a href="{{url_for('title')}}">Titles</a></li>
-	    <li><a href="{{url_for('publisher')}}">Publishers</a></li>
+      <li><a href="{{url_for('title')}}">Titles</a></li>
+      <li><a href="{{url_for('publisher')}}">Publishers</a></li>
     </ul>
   </div>
 </nav>
-<h1> Authors </h1><hr/>
-<h4> Click on the table heading to sort (1 click: A-Z, 2 clicks: Z-A)</h4>
-<table id = "table" BORDER = "2" id = "myTable" width = "10">
-		<thead>
-    <tr>
-			<th onclick="sortTable(0)" width="1">Born</th>
-			<th onclick="sortTable(1)" width="1">Name</th>
-			<th onclick="sortTable(2)" width="1">Education</th>
-			<th onclick="sortTable(3)" width="1">Nationality</th>
-			<th onclick="sortTable(4)" width="1">Description</th>
-			<th onclick="sortTable(5)" width="1">Alma Mater</th>
-			<th onclick="sortTable(6)" width="1">Wikipedia URL</th>
-			<th onclick="sortTable(7)" width="1">Image</th>
-			<th onclick="sortTable(8)" width="1">Titles</th>
-			<th onclick="sortTable(9)" width="1">Publishers</th>
-		</tr>
-  </thead>
-  <tbody>
-   {% for i in auths %}
-      <tr>
-        <td width="1">{{i.born}}</td>
-        <td width="1">{{i.name}}</td>
-        <td width="1">{{i.education}}</td>
-        <td width="1">{{i.nationality}}</td>
-        <td width="1">{{i.description}}</td>
-        <td width="1">{{i.alma_mater}}</td>
-        <td width="1"><a herf ="{{i.wikipedia_url}}">{{i.wikipedia_url}}</td>
-        <td >
-          {% if i.image_url == "N/A" %}
-            <p>N/A</p>
-          {% else %}
-            <img src="{{i.image_url}}" height="200"></td>
-          {% endif %}
-          
-        <td width="1">{% for x in books %}
-          {% if x.author == i.name %}
-            <p>{{x.title}}</p>
-            
-          {% endif %}
-        
-        {% endfor %}</td>
-        <td width="1">{{i.publisher}}</td>
-      </tr>
-      {% endfor %}
-  </tbody>
-</table>
 
-		<!--<tr>
-			<td>1965-07-31</td>
-			<td>J. K. Rowling</td>
-			<td>Bachelor of Arts</td>
-			<td>British</td>
-			<td>Joanne \"Jo\" Rowling, OBE, FRSL, pen names J. K. Rowling and Robert Galbraith, is a British novelist, screenwriter and film producer best known as the author of the Harry Potter fantasy series.</td>
-			<td>University of Exeter</td>
-			<td><a href = "https://en.wikipedia.org/wiki/J._K._Rowling">https://en.wikipedia.org/wiki/J._K._Rowling</a></td>
-			<td><img src = "static/images/J._K._Rowling_2010.jpg" alt="http://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/J._K._Rowling_2010.jpg/220px-J._K._Rowling_2010.jpg" class=""></td>
-			<td><a href="{{url_for('title')}}">Harry Potter and the Sorcerer's Stone</a></td>
-			<td><a href="{{url_for('publisher')}}">Pottermore</a></td>
-		</tr>
-		<tr>
-			<td>1903-06-25 - 1950-01-21</td>
-			<td>George Orwell</td>
-			<td>N/A</td>
-			<td>N/A</td>
-			<td>Eric Arthur Blair, who used the pen name George Orwell, was an English novelist, essayist, journalist and critic. His work is marked by lucid prose, awareness of social injustice, opposition to totalitarianism, and outspoken support of democratic socialism.</td>
-			<td>Eton College</td>
-			<td><a href = "https://en.wikipedia.org/wiki/George_Orwell">https://en.wikipedia.org/wiki/George_Orwell</a></td>
-			<td><img src = "static/images/George_Orwell_press_photo.jpg" alt="http://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/George_Orwell_press_photo.jpg/220px-George_Orwell_press_photo.jpg" class=""></td>
-			<td><a href="{{url_for('title')}}">Animal Farm</a></td>
-			<td><a href="{{url_for('publisher')}}">Scholastic Corporation</a></td>
-		</tr>
-		<tr>
-			<td>1929-06-25</td>
-			<td>Eric Carle</td>
-			<td>N/A</td>
-			<td>American</td>
-			<td>Eric Carle is an American designer, illustrator, and writer of children's books. He is most famous for The Very Hungry Caterpillar, a picture book with few words that has been translated into more than 62 languages and sold more than 44 million copies.</td>
-			<td>Academy of Fine Arts Stuttgart\nAcademy of Fine Arts Vienna</td>
-			<td><a href="https://en.wikipedia.org/wiki/Eric_Carle">https://en.wikipedia.org/wiki/Eric_Carle</a></td>
-			<td>N/A</td>
-			<td><a href="{{url_for('title')}}">The Very Hungry Caterpillar</a></td>
-			<td><a href="{{url_for('publisher')}}">Penguin Group</a></td>
-		</tr>-->
-<script>
+    <div id="title" class="text-center title">
+      <br>
+      <h1>Authors</h1>
+      <h4> Click on the table heading to sort (1 click: A-Z, 2 clicks: Z-A)</h4>
+    </div>
 
-function sortTable(n) {
-  var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-  table = document.getElementById("table");
-  switching = true;
-  //Set the sorting direction to ascending:
-  dir = "asc"; 
-  /*Make a loop that will continue until
-  no switching has been done:*/
-  while (switching) {
-    //start by saying: no switching is done:
-    switching = false;
-    rows = table.getElementsByTagName("TR");
-    /*Loop through all table rows (except the
-    first, which contains table headers):*/
-    for (i = 1; i < (rows.length - 1); i++) {
-      //start by saying there should be no switching:
-      shouldSwitch = false;
-      /*Get the two elements you want to compare,
-      one from current row and one from the next:*/
-      x = rows[i].getElementsByTagName("TD")[n];
-      y = rows[i + 1].getElementsByTagName("TD")[n];
-      /*check if the two rows should switch place,
-      based on the direction, asc or desc:*/
-      if (dir == "asc") {
-        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
-          //if so, mark as a switch and break the loop:
-          shouldSwitch= true;
-          break;
-        }
-      } else if (dir == "desc") {
-        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
-          //if so, mark as a switch and break the loop:
-          shouldSwitch= true;
-          break;
-        }
-      }
-    }
-    if (shouldSwitch) {
-      /*If a switch has been marked, make the switch
-      and mark that a switch has been done:*/
-      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-      switching = true;
-      //Each time a switch is done, increase this count by 1:
-      switchcount ++;      
-    } else {
-      /*If no switching has been done AND the direction is "asc",
-      set the direction to "desc" and run the while loop again.*/
-      if (switchcount == 0 && dir == "asc") {
-        dir = "desc";
-        switching = true;
-      }
-    }
-  }
-}
-</script>
+    <div class="text_center">
+    <br>
+    {% if authors == [] %}
+      <p>No authors exist</p>
+    {% else %}
+      <table id="myTable" cellpadding="500px" class="sortable table-bordered text-center" style="margin: auto; style">
+      <thead>
+        <tr>
+            <th>Title</th>
+            <th>Born</th>
+            <th>Nationality</th>
+            <th>Alma Mater</th>
+            <th>Education</th>
+            <th>Wikipedia Url</th>
+              </tr>
+      </thead>
+      <tbody>
+        <script>
+          $(document).ready( function () {
+              $('#myTable').DataTable();
+          } );
+        </script>
+        {% for i in authors %}
+          <tr>
+            <td>{{i.name}}</td>
+            <td>{{i.born}}</td>
+            <td>{{i.nationality}}</td>
+            <td>{{i.alma_mater}}</td>
+            <td>{{i.education}}</td>
+            <td><a href = "{{i.wikipedia_url}}">&nbsp{{i.wikipedia_url}}</a>&nbsp</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+      <tfoot>
+      <!-- example of calculating totals from a table-->
+      <!--<tr><td>TOTAL</td><td>£45,000</td></tr-->
+      </tfoot>
+      </table>
+    {% endif %}
+    </div>
+    <br>
+    <br>
+  </body>
+</html>
+  <!-- BOOK VERSION<head>
+  <link rel="stylesheet" type="text/css" href="static/css/index.css">-->
+  <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" -->
+      <!-- rel="stylesheet"> -->
+<!--
 
-</body>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>BOOKS</title>
 
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+      <
+      <link href="static/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="static/Bootstrap/css/custom.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
+      <link href="static/css/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+      <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
+      <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
+
+  </head>
+
+  <body>
+
+
+    <div id="title" class="text-center title" style="color:DodgerBlue">
+      <br>
+      <h1 class="text-center" style="font-family: 'Montserrat';">List of Books</h1>
+    </div>
+    <br>
+
+
+    <div class="text_center">
+    <br>
+    {% if authors == [] %}
+      <p>No authors exist</p>
+    {% else %}
+      <table id="myTable" cellpadding="5px" class="sortable table-bordered text-center" style="margin: auto; style">
+      <thead>
+        <tr><th>Title</th><th>&nbspGoogle ID&nbsp</th><th>ISBN</th><th>&nbspPublication Date&nbsp</th><th>Author</th><th>Publisher</th></tr>
+      </thead>
+      <tbody>
+        <script>
+          $(document).ready( function () {
+              $('#myTable').DataTable();
+          } );
+        </script>
+        {% for i in authors %}
+          <tr>
+            <td>&nbsp{{i.title}}&nbsp</td>
+            <td>&nbsp{{i.isbn}}&nbsp</td>
+            <td><a href = "/books/{{i.name}}">&nbsp{{i.name}}&nbsp</a></td>
+            <td><a href = "/authors/{{i.author_name}}">{{i.author_name}}</a></td>
+            <td><a href = "/publishers/{{i.publisher_name}}">{{i.publisher_name}}</a></td>
+          </tr>
+        {% endfor %}
+      </tbody>
+      <tfoot>
+       example of calculating totals from a table
+      <tr><td>TOTAL</td><td>£45,000</td></tr
+      </tfoot>
+      </table>
+    {% endif %}
+    </div>
+    <br>
+    <br>
+  </body>
+  -->
 </html>
