--- a/templates/author.html
+++ b/templates/author.html
@@ -1,6 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
-
 <html>
   <head>
   <!--<link rel="stylesheet" type="text/css" href="static/css/index.css">-->
@@ -55,7 +52,7 @@
       <table id="myTable" cellpadding="500px" class="sortable table-bordered text-center" style="margin: auto; style">
       <thead>
         <tr>
-            <th>Title</th>
+            <th>Author Name</th>
             <th>Born</th>
             <th>Nationality</th>
             <th>Alma Mater</th>
@@ -80,16 +77,13 @@
           </tr>
         {% endfor %}
       </tbody>
-      <tfoot>
-      <!-- example of calculating totals from a table-->
-      <!--<tr><td>TOTAL</td><td>£45,000</td></tr-->
-      </tfoot>
       </table>
     {% endif %}
     </div>
     <br>
     <br>
   </body>
+  -->
 </html>
   <!-- BOOK VERSION<head>
   <link rel="stylesheet" type="text/css" href="static/css/index.css">-->
@@ -162,4 +156,3 @@
     <br>
   </body>
   -->
-</html>
