--- a/templates/i_title.html
+++ b/templates/i_title.html
@@ -1,12 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
-
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{publisher_name}}</title>
+    <title>{{book_title}}</title>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -32,43 +29,32 @@
       <li ><a href="{{url_for('index')}}">Home</a></li>
       <li ><a href="{{url_for('about')}}">About</a></li>
       <li ><a href="{{url_for('author')}}">Authors</a></li>
-      <li ><a href="{{url_for('title')}}">Titles</a></li>
-      <li class="active"><a href="{{url_for('publisher')}}">Publishers</a></li>
+      <li class="active"><a href="{{url_for('title')}}">Titles</a></li>
+      <li ><a href="{{url_for('publisher')}}">Publishers</a></li>
     </ul>
   </div>
 </nav>
 
     <div class="jumbotron text-center" style="font-family: 'Montserrat', sans-serif;">
-    <h1>{{publisher_name}}</h1>
-    <div class = "cover"><img src = "{{publisher_image_url}}"></div>
+    <h1>{{book_title}}</h1>
+    <div class = "cover"><img src = "{{title_image_url}}"></div>
   </div>
 
   <div class = "container">
     <div class = "row">
       <div class = "col-md-6 text-left">
         <h2>Information: </h2>
-        <p><b>Name: </b>{{publisher_name}}</p>
-        <p><b>Owner: </b>{{owner}}</p>
-        <p><b>About: </b>{{publisher_description}}</p>
-        <p><a href = "{{website}}"><b>Publisher Website</b></a></p>
-        <p><a href = "{{publisher_image_url}}"><b>Image URL</b></a></p>
+        <p><b>Title: </b>{{book_title}}</p>
+        <p><b>Author: </b>{{author}}</p>
+        <p><b>Description: </b>{{book_descrip}}</p>
+        <p><b>ISBN: </b>{{isbn}}</p>
+        <p><b>Publication Date: </b>{{pub_date}}</p>
+        <p><b>Description: </b>{{book_descrip}}</p>
+
+        <p><b>Publisher: </b><a href = "/publisher/{{pub}}">{{pub}}</a></p>
+
       </div>
 
       <br>
-
-      <div class = "col-md-6 text-left">
-        <p><b>Books published by {{publisher_name}}</b></p>
-        {% for i in lib %}
-        <p><a href =  "/title/{{i}}">{{i}}</a></p>
-        {% endfor %}
-
-        <br>
-        <br>
-
-        <p><b>Authors associated with {{publisher_name}}</b></p>
-        {% for i in lia %}
-        <p><a href =  "/authors/{{i}}">{{i}}</a></p>
-        {% endfor %}
-        <br>
   </body>
   </html>
