Embedded Image Url for Author

--- a/templates/about.html
+++ b/templates/about.html
@@ -112,6 +112,7 @@
 <li>Git Hub Issue Tracker Link = <a href="https://github.com/mitchellyick/cs329e-idb/issues">https://github.com/mitchellyick/cs329e-idb/issues</a></li>
 <li>Git Hub Repo Link = <a href="https://github.com/mitchellyick/cs329e-idb">https://github.com/mitchellyick/cs329e-idb</a></li>
 <li>Git Hub Wiki Link = <a href="https://github.com/mitchellyick/cs329e-idb/wiki">https://github.com/mitchellyick/cs329e-idb/wiki</a></li>
+<li>Speaker Deck Presentation Link = <a href="https://speakerdeck.com/aleemali20/books-galore-website">https://speakerdeck.com/aleemali20/books-galore-website</a></li>
 </ul>
 <h2> Data Set: </h2>
 <ul>
