--- a/templates/i_authors.html
+++ b/templates/i_authors.html
@@ -1,6 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
-
 <html>
   <head>
     <meta charset="utf-8">
@@ -12,11 +9,6 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- -->
-    <link href="static/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/Bootstrap/css/custom.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
-    <link href="static/css/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
   <style>
   </style>
   </head>
@@ -31,16 +23,16 @@
     <ul class="nav navbar-nav">
       <li ><a href="{{url_for('index')}}">Home</a></li>
       <li ><a href="{{url_for('about')}}">About</a></li>
-      <li ><a href="{{url_for('author')}}">Authors</a></li>
+      <li class="active"><a href="{{url_for('author')}}">Authors</a></li>
       <li ><a href="{{url_for('title')}}">Titles</a></li>
-      <li class="active"><a href="{{url_for('publisher')}}">Publishers</a></li>
+      <li ><a href="{{url_for('publisher')}}">Publishers</a></li>
     </ul>
   </div>
 </nav>
 
     <div class="jumbotron text-center" style="font-family: 'Montserrat', sans-serif;">
     <h1>{{author_name}}</h1>
-    <div class = "cover"><img src = "{{publisher_image_url}}"></div>
+    <div class = "cover"><img src = "{{image_url}}"></div>
   </div>
 
   <div class = "container">
