--- a/templates/i_publisher.html
+++ b/templates/i_publisher.html
@@ -1,6 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
-
 <html>
   <head>
     <meta charset="utf-8">
@@ -11,11 +8,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <!-- -->
-    <link href="static/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/Bootstrap/css/custom.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
-    <link href="static/css/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet"> -->
+    
 
   <style>
   </style>
@@ -67,7 +61,7 @@
 
         <p><b>Authors associated with {{publisher_name}}</b></p>
         {% for i in lia %}
-        <p><a href =  "/authors/{{i}}">{{i}}</a></p>
+        <p><a href =  "/author/{{i}}">{{i}}</a></p>
         {% endfor %}
         <br>
   </body>
