--- a/templates/i_title.html
+++ b/templates/i_title.html
@@ -9,10 +9,7 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- -->
-    <link href="static/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/Bootstrap/css/custom.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
-    <link href="static/css/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
   </style>
@@ -45,11 +42,10 @@
       <div class = "col-md-6 text-left">
         <h2>Information: </h2>
         <p><b>Title: </b>{{book_title}}</p>
-        <p><b>Author: </b>{{author}}</p>
+        <p><b>Author: </b><a href = "/author/{{author}}">{{author}}</a></p>
         <p><b>Description: </b>{{book_descrip}}</p>
         <p><b>ISBN: </b>{{isbn}}</p>
         <p><b>Publication Date: </b>{{pub_date}}</p>
-        <p><b>Description: </b>{{book_descrip}}</p>
 
         <p><b>Publisher: </b><a href = "/publisher/{{pub}}">{{pub}}</a></p>
 
