--- a/templates/i_title.html
+++ b/templates/i_title.html
@@ -42,7 +42,9 @@
       <div class = "col-md-6 text-left">
         <h2>Information: </h2>
         <p><b>Title: </b>{{book_title}}</p>
-        <p><b>Author: </b><a href = "/author/{{author}}">{{author}}</a></p>
+        {% for i in lia %}
+          <p><b>Author: </b><a href = "/author/{{i}}">{{i}}</a></p>
+        {% endfor %}
         <p><b>Description: </b>{{book_descrip}}</p>
         <p><b>ISBN: </b>{{isbn}}</p>
         <p><b>Publication Date: </b>{{pub_date}}</p>
